Fix realtime delivery of rapid QQ client messages